# tmignore

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
src/: config.rs  excluder.rs  main.rs  patterns.rs  scanner.rs  service.rs  state.rs
