[package]
name = "tmignore"
version = "0.1.0"
edition = "2024"
description = "Exclude developer dependency directories and arbitrary paths from macOS backups"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"
